--- a/site-contents/index.html
+++ b/site-contents/index.html
@@ -1,28 +1,19 @@
-<!doctype html>
-<html lang="en">
-    <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html>
+<head>
+    <title>user827</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta name="description" content="A personal home page of user827">
+    <meta name="author" content="user827">
+    <meta name="language" content="EN">
 
-	<header><title>Hello world</title></header>
-	<meta name="description" content="A simple Hello World">
-	<meta name="author" content="me">
-
-	<meta property="og:title" content="Hello World.">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://loptr.link/">
-	<meta property="og:description" content="A simple Hello World.">
-	<meta property="og:image" content="image.png">
-
-	<link rel="icon" href="/favicon.ico">
-	<link rel="icon" href="/favicon.svg" type="image/svg+xml">
-	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
-	  <link rel="stylesheet" href="css/styles.css?v=1.0">
-    </head>
-
-    <body>
-	Hello, world!
-	<!-- <script src="js/scripts.js"></script> -->
-    </body>
+    <meta property="og:title" content="user827">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="user827">
+    <meta property="og:description" content="A personal home page of user827">
+</head>
+<body>
+  <h1>Hello World! It's Me :-)</h1>
+  <p><a href="https://github.com/user827">GitHub</a></p>
+</body>
 </html>
